# Compass

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  prd.md  tech-design.md  产品文档.html  商业投资文档.html
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: opportunity.py
backend/app/ai/: embeddings.py  extract.py  llm_config.py  nl_search.py  profile_suggest.py  schemas.py  suggest.py  websearch.py
backend/app/ai/prompts/: __init__.py  extract_v1.py  match_v1.py  nl_search_v1.py  profile_suggest_v1.py  suggest_selectors_v1.py
backend/app/api/: main.py
backend/app/api/routes/: auth.py  public.py  sources.py  (+1 more)
backend/app/core/: config.py  db.py  kv.py  security.py  storage.py
backend/app/crawler/: base.py  browser.py
backend/app/matching/: engine.py  profiles.py  schemas.py
backend/app/models/: __init__.py  public.py  tenant.py
backend/app/notify/: channels.py  dispatcher.py
backend/app/parsing/: clean.py  documents.py
backend/app/tasks/: celery_app.py  pipeline.py
backend/scripts/: dev_crawl.py  dev_extract.py  dev_inspect.py  dev_match.py  dev_seed.py
backend/tests/: test_attachments.py  test_ccgp_adapter.py  test_clean.py  test_crawl_schedule.py  test_documents.py  test_extract.py  test_generic_adapter.py  test_generic_browser.py  test_jsggzy_adapter.py  test_matching.py  test_opportunity.py  test_profile_suggest.py  test_profiles.py  test_security.py  test_smart_suggest.py  test_sources_api.py  test_suggest.py
backend/tests/fixtures/: ccgp_detail.html  ccgp_list.html  jsggzy_detail.html  jsggzy_list.json
(+31 files in other folders)
